	  so keep dealing with both events. (DLR, suggested by Helmut
	  Jarausch)
- configure.ac:
	- Update copyright notice to account for modifications. (DLR)
- COPYING:
	- Add a copy of the GNU GPL version 3. (DLR)
- COPYING.DOC:
	- Add a copy of the GNU FDL version 1.2. (DLR)
- Makefile.am:
	- Add COPYING.DOC to EXTRA_DIST. (DLR)
- doc/faq.html:
	- Update RPM links for nano 2.0.x. (DLR)
- doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
	- Make all copyright notices consistent. (DLR)
	- Delete translation of old licensing terms, until it can be
	  updated. (DLR)
	- Add translation of new licensing terms by Jean-Philippe
	  Guérard.
- doc/man/rnano.1, doc/man/fr/rnano.1:
	- Add missing copyright notice from nano-tiny.1, which rnano.1
	  is based on. (DLR)

GNU nano 2.0.6 - 2007.04.26
- text.c:
  backup_lines()
	- Avoid a segfault when the mark begins and ends on the line
	  after the last line of the paragraph. (DLR)
- TODO:
	- Add entries for fixing limitations with pasting text and
	  handling bad/incomplete UTF-8 sequences. (DLR)

GNU nano 2.0.5 - 2007.04.22
- files.c:
  open_file()
	- Open files using their full paths whenever possible, so that
	  ~user/file.txt and "~user/file.txt" are treated the same way
	  if ~user is a user's home directory. (DLR)
  real_dir_from_tilde()
	- Fix segfault when dealing with directory names that begin with
	  "~", but that aren't users' home directories. (DLR, found by
	  Justin Fletcher)
	- Fix long-standing problem where directory names that began
	  with "~", but that weren't users' home directories, could be
	  erroneously treated as users' home directories (e.g. "~d/"
	  would be treated as "~daemon/"). (DLR, found by Justin
	  Fletcher)
	- Simplify. (DLR)
  do_writeout()
	- Properly display the warning in all cases if we try to save
	  (a) an existing file under a different name, or (b) a file
	  with no name under an existing file's name. (DLR)
	- Rename variable different_name to do_warning, for clarity.